Actualizar rutas de ejemplo en .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,18 @@ JWT_SECRET=your_jwt_secret_here
 BINANCE_API_KEY=your_binance_api_key_here
 BINANCE_API_SECRET=your_binance_api_secret_here
 
-# Bot Paths
-XRP_BOT_PATH=/path/to/trading-bot-xrp
-XRP_BOT_LOG=/path/to/trading-bot-xrp/trading_bot_xrp_30m.log
-XRP_BOT_STATE=/path/to/trading-bot-xrp/bot_state_xrp_30m.json
-XRP_BOT_SIMULATION=/path/to/trading-bot-xrp/simulation_state_xrp_30m.json
+# Bot Paths - AJUSTAR SEGÚN EL ENTORNO
+# Para Linux/MV:
+XRP_BOT_PATH=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot
+XRP_BOT_LOG=/home/usuario/new-trading-bots/monitor.log
+XRP_BOT_STATE=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot/bot_state_xrp_30m.json
+XRP_BOT_SIMULATION=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot/simulation_state_xrp_30m.json
+
+# Para Windows (comentar las líneas de arriba y descomentar estas):
+# XRP_BOT_PATH=C:\Users\USUARIO\Documents\GitHub\trading-bots
+# XRP_BOT_LOG=C:\Users\USUARIO\Documents\GitHub\trading-bots\monitor.log
+# XRP_BOT_STATE=C:\Users\USUARIO\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\bot_state.json
+# XRP_BOT_SIMULATION=C:\Users\USUARIO\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\simulation_state.json
 
 # Notification Settings
 TELEGRAM_BOT_TOKEN=your_telegram_token_here
