Mejoras profesionales: estructura de proyecto, manejo de errores, documentación y configuración

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,112 @@
-# API Configuration
+# ======================================================
+# TRADING BOTS API - CONFIGURACIÓN DE VARIABLES DE ENTORNO
+# ======================================================
+# Copia este archivo a '.env' y ajusta los valores según tu entorno
+
+# ======================================================
+# CONFIGURACIÓN GENERAL DE LA API
+# ======================================================
+
+# Host y puerto donde se ejecutará la API
 API_HOST=0.0.0.0
 API_PORT=5000
+
+# Modo debug (True/False) - Activar solo en desarrollo
 API_DEBUG=False
 
-# Security
-API_KEY=your_api_key_here
-JWT_SECRET=your_jwt_secret_here
+# Entorno de ejecución (development, production)
+FLASK_ENV=production
 
-# Binance API Keys
+# Nivel de logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO
+
+# ======================================================
+# SEGURIDAD
+# ======================================================
+
+# Clave secreta para firmar tokens JWT (generar una clave segura y única)
+JWT_SECRET_KEY=generate_a_secure_random_key_here
+
+# Tiempo de expiración de tokens JWT en horas
+JWT_EXPIRATION_HOURS=24
+
+# Claves para webhooks
+BINANCE_WEBHOOK_SECRET=your_binance_webhook_secret_here
+TELEGRAM_WEBHOOK_TOKEN=your_telegram_webhook_token_here
+TRADINGVIEW_WEBHOOK_KEY=your_tradingview_webhook_key_here
+
+# ======================================================
+# BINANCE API
+# ======================================================
+
+# Credenciales de la API de Binance
 BINANCE_API_KEY=your_binance_api_key_here
 BINANCE_API_SECRET=your_binance_api_secret_here
 
-# Bot Paths - AJUSTAR SEGÚN EL ENTORNO
-# Para Linux/MV:
-XRP_BOT_PATH=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot
-XRP_BOT_LOG=/home/usuario/new-trading-bots/monitor.log
-XRP_BOT_STATE=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot/bot_state_xrp_30m.json
-XRP_BOT_SIMULATION=/home/usuario/new-trading-bots/src/spot_bots/xrp_bot/simulation_state_xrp_30m.json
+# Configuración de Binance
+BINANCE_TESTNET=True  # Usar testnet (True) o producción (False)
 
-# Para Windows (comentar las líneas de arriba y descomentar estas):
-# XRP_BOT_PATH=C:\Users\USUARIO\Documents\GitHub\trading-bots
-# XRP_BOT_LOG=C:\Users\USUARIO\Documents\GitHub\trading-bots\monitor.log
-# XRP_BOT_STATE=C:\Users\USUARIO\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\bot_state.json
-# XRP_BOT_SIMULATION=C:\Users\USUARIO\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\simulation_state.json
+# ======================================================
+# RUTAS DE BOTS - AJUSTAR SEGÚN EL ENTORNO
+# ======================================================
 
-# Notification Settings
+# ----------------------
+# CONFIGURACIÓN PARA LINUX/MV
+# ----------------------
+
+# Bot SOL 15m
+SOL_BOT_PATH=/home/usuario/trading-bots/src/spot_bots/sol_bot_15m
+SOL_BOT_SCRIPT=/home/usuario/trading-bots/src/spot_bots/sol_bot_15m/main.py
+SOL_BOT_LOG=/home/usuario/trading-bots/src/spot_bots/sol_bot_15m/sol_bot_15m.log
+SOL_BOT_STATE=/home/usuario/trading-bots/src/spot_bots/sol_bot_15m/sol_bot_15min_state.json
+
+# Bot XRP 30m
+XRP_BOT_PATH=/home/usuario/trading-bots/src/spot_bots/xrp_bot
+XRP_BOT_SCRIPT=/home/usuario/trading-bots/src/spot_bots/xrp_bot/main.py
+XRP_BOT_LOG=/home/usuario/trading-bots/monitor.log
+XRP_BOT_STATE=/home/usuario/trading-bots/src/spot_bots/xrp_bot/bot_state_xrp_30m.json
+XRP_BOT_SIMULATION=/home/usuario/trading-bots/src/spot_bots/xrp_bot/simulation_state_xrp_30m.json
+
+# ----------------------
+# CONFIGURACIÓN PARA WINDOWS (comentar las líneas de arriba y descomentar estas)
+# ----------------------
+
+# Bot SOL 15m
+# SOL_BOT_PATH=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\sol_bot_15m
+# SOL_BOT_SCRIPT=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\sol_bot_15m\main.py
+# SOL_BOT_LOG=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\sol_bot_15m\sol_bot_15m.log
+# SOL_BOT_STATE=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\sol_bot_15m\sol_bot_15min_state.json
+
+# Bot XRP 30m
+# XRP_BOT_PATH=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot
+# XRP_BOT_SCRIPT=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\main.py
+# XRP_BOT_LOG=C:\Users\EDISON\Documents\GitHub\trading-bots\monitor.log
+# XRP_BOT_STATE=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\bot_state.json
+# XRP_BOT_SIMULATION=C:\Users\EDISON\Documents\GitHub\trading-bots\src\spot_bots\xrp_bot\simulation_state.json
+
+# ======================================================
+# NOTIFICACIONES
+# ======================================================
+
+# Configuración de Telegram
 TELEGRAM_BOT_TOKEN=your_telegram_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
+
+# Configuración de notificaciones por correo (opcional)
+# EMAIL_SERVER=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USERNAME=your_email@gmail.com
+# EMAIL_PASSWORD=your_app_password_here
+# EMAIL_RECIPIENT=recipient@example.com
+
+# ======================================================
+# CONFIGURACIÓN DE BASE DE DATOS (para futuras versiones)
+# ======================================================
+
+# DB_TYPE=sqlite  # sqlite, mysql, postgresql
+# DB_PATH=database.db  # Para SQLite
+# DB_HOST=localhost  # Para MySQL/PostgreSQL
+# DB_PORT=3306  # Para MySQL/PostgreSQL
+# DB_NAME=trading_bots  # Para MySQL/PostgreSQL
+# DB_USER=username  # Para MySQL/PostgreSQL
+# DB_PASSWORD=password  # Para MySQL/PostgreSQL
