Añadir soporte para proxy inverso y HTTPS

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ FLASK_ENV=production
 # Nivel de logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
 
+# Configuración para proxy inverso (true/false)
+# Activar cuando la API se ejecuta detrás de Nginx u otro proxy
+BEHIND_PROXY=false
+
 # ======================================================
 # SEGURIDAD
 # ======================================================
