Actualización para el bot SOL adaptativo: ruta del script y documentación

--- a/config/api_config.json
+++ b/config/api_config.json
@@ -2,7 +2,9 @@
     "host": "0.0.0.0",
     "port": 5000,
     "debug": false,
-    "allowed_origins": ["*"],
+    "allowed_origins": [
+        "*"
+    ],
     "log_level": "INFO",
     "jwt_expiration_hours": 24,
     "rate_limit": {
@@ -14,13 +16,7 @@
             "name": "SOL Bot 15m",
             "symbol": "SOLUSDT",
             "interval": "15m",
-            "script_path": "../trading-bots/src/spot_bots/sol_bot_15m/main.py"
-        },
-        "xrp_bot": {
-            "name": "XRP Bot",
-            "symbol": "XRPUSDT",
-            "interval": "30m",
-            "script_path": "../trading-bots/src/spot_bots/xrp_bot/main.py"
+            "script_path": "/home/edisonbautistaruiz2025/new-trading-bots/src/spot_bots/sol_bot_15m/adaptive_main.py"
         }
     }
 }
