Limpieza final, automatización de scripts, documentación actualizada y compatibilidad total con Google Cloud VM. Listo para despliegue profesional.

--- a/config/bots_config.json
+++ b/config/bots_config.json
@@ -5,7 +5,7 @@
         "symbol": "SOLUSDT",
         "interval": "15m",
         "path": "~/new-trading-bots/src/spot_bots/sol_bot_15m",
-        "start_script": "start_enhanced.sh",
+        "start_script": "start_bot.sh",
         "stop_script": "stop.sh",
         "description": "Bot de trading para Solana con intervalo de 15 minutos",
         "created_at": "2025-05-26T00:00:00Z",
