--- a/config/bots_config.json
+++ b/config/bots_config.json
@@ -9,13 +9,15 @@
         "stop_script": "stop.sh",
         "description": "Bot de trading para Solana con intervalo de 15 minutos",
         "created_at": "2025-05-26T00:00:00Z",
-        "updated_at": "2025-05-26T18:00:00Z",
+        "updated_at": "2025-05-29T12:00:00Z",
         "config": {
             "simulation": true,
             "initial_balance": 100,
             "max_position_size": 0.95,
-            "stop_loss": 0.02,
-            "take_profit": 0.05,
+            "risk_per_trade": 0.03,
+            "stop_loss": 0.05,
+            "take_profit": 0.03,
+            "trailing_stop": 0.01,
             "notification_interval": 15
         }
     }
